syntax = "proto3";

package AcFunDanmu;

message AppInfo {
    string appName = 1;
    string appVersion = 2;
    string appChannel = 3;
    string sdkVersion = 4;
    string extensionInfo = 11;
}