syntax = "proto3";

message TokenInfo {
	TokenType tokenType = 1;
	bytes token = 2;

	enum TokenType {
		kInvalid = 0;
		kServiceToken = 1;
	}
}