syntax = "proto3";

message User {
    int32 appId = 1;
    int64 uid = 2;
}