syntax = "proto3";

import "User.proto";

message UserInstance {
    User user = 1;
    int64 instanceId = 2;
}